package io.javabrains.proesof.models;

public enum Cargo {
    DESENVOLVEDOR_JUNIOR,
    DESENVOLVEDOR_SENIOR,
    ANALISTA_JUNIOR,
    ANALISTA_SENIOR
}
